--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"eject": "react-scripts eject"
 	},
 	"dependencies": {
+		"bootstrap": "^4.5.0",
+		"jquery": "^3.5.1",
 		"react": "^16.13.1",
 		"react-bootstrap": "^1.0.0",
 		"react-dom": "^16.13.1",
